@@ -1,3 +1,4 @@
+Oct 30 2002  2.7.1  Fixed shadowing bug in dumpfile code
 Oct 29 2002  2.7.1  Fixed gpsmap bug where files found exactly where the netxml
                      specified them were skipped
                     Updated kismet2cwgd to work again
